fix overflowing

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,17 +17,29 @@
   *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+
+  }
+
+  body{
+    background-color: #4e443f;
+    overflow: hidden;
+    padding: 5px;
+    width: 100vw;
+    max-width: 100%;
+    height: 100vh;
   }
 
   main{
     height: 80vh;
+    width: 100%;
     background-color: green;
   }
 
  nav{
   display: flex;
   height: 10vh;
-  background-color: blue;
+  background-color: white;
   align-items: center;
   justify-content: space-between;
   padding: 0 15px;
@@ -53,6 +65,21 @@
 
  .featured {
    height: 50vh;
-   width: 100vw;
+   width: 100%;
   background-color: yellow;
+ }
+
+ .four-best{
+   height:30vh;
+   width: 100%;
+   display: flex;
+ }
+
+ .one-of-four{
+   height: 100%;
+   width: 25%;
+   background-color: #7a7a7a; }
+
+ .one-of-four:nth-child(odd){
+   background-color: #b5b5b5;
  }
